# GitMe

./: .pylintrc  README.md  config.schema.json  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: code-tests.yml  lint-code.yml  requirements.txt
example/: run.py  run.sh
gitme/: config.py  gh.py  metadata.py  runner.py
gitme/llm/: base.py  prompts.py  setup.py
gitme/llm/providers/: google.py  k8s.py
src/: ghprofile.py  main.py  metadata.py  run.py
src/hooks/: gh.py  profile.py
src/hooks/llm/: base.py  config.py  gemini.py  utils.py
src/llm/: base.py  prompts.py  setup.py
src/llm/providers/: gemini.py  google.py
tests/providers/: test_google_provider.py
